--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
 html {
   font-size: 16px !important;
+  scrollbar-gutter: stable;
 }
 
 #r-builder-app h3 {
   margin: 0;
   line-height: normal;
+}
+
+body[data-radix-scroll-lock] {
+  overflow: auto !important;
+  padding-right: 0 !important;
 }
 
 :root {
@@ -54,6 +60,18 @@ body {
 #r-builder-app textarea {
   /* all: unset; */
   box-sizing: border-box;
+}
+
+#r-builder-app-choose-setting input,
+#r-builder-app-choose-setting select {
+  height: 50px !important;
+  border: 1px solid #ebebeb !important;
+}
+
+#r-builder-app-choose-setting button {
+  height: 50px !important;
+  border: 1px solid #ebebeb !important;
+  background-color: var(--shopify-theme-primary-bg) !important;
 }
 
 /* h1 {
